Fix overview summary bar spacing in firefox

--- a/src/reports/components/outcome-summary-bar.scss
+++ b/src/reports/components/outcome-summary-bar.scss
@@ -16,8 +16,9 @@ $outcome-not-applicable-color: $neutral-outcome;
 
 .outcome-summary-bar {
     $outcome-summary-icon-size: 16px;
-    flex: 0 0 100%;
     display: flex;
+    flex-grow: 0;
+    flex-shrink: 0;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
